--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -19,7 +19,7 @@ cards:
     abstract: > 
       Number of deaths of people who had had a positive test result for COVID-19, by date of death. 
       By definition, the actual cause of death may not be COVID-19 in all cases.  National data are not directly comparable - 
-      see the {indicator definition:genDeathsByDeathDate} for more information.    
+      see the About tab for more information.    
     # {{ EndDevOnlyBlock }}
 
     download:
@@ -77,7 +77,7 @@ cards:
       # TODO: GA to write and reference md file
       - heading: About 
         tabType: metadata
-        filename: metadataTabs/deaths/tabDailyDeathsByDeathDate.md
+        filename: metadataTabs/deaths/tabDailyDeaths.md
       # {{ EndDevOnlyBlock }}
 
   - heading: Daily deaths by date reported
@@ -89,7 +89,7 @@ cards:
     abstract: > 
       Number of deaths of people who had had a positive test result for COVID-19, by date reported. 
       By definition, the actual cause of death may not be COVID-19 in all cases.  National data are not directly comparable - 
-      see the {indicator definition:genDeathsByPublishDate} for more information.    
+      see the About tab for more information.    
     # {{ EndDevOnlyBlock }} 
     
     download:
@@ -148,7 +148,7 @@ cards:
       # TODO: GA to write and reference md file
       - heading: About 
         tabType: metadata
-        filename: metadataTabs/deaths/tabDailyDeathsbyPublishDate.md
+        filename: metadataTabs/deaths/tabDailyDeaths.md
       # {{ EndDevOnlyBlock }}
 
   - heading: Deaths by age and sex
@@ -165,7 +165,7 @@ cards:
       Number of deaths of people who had had a positive test result for COVID-19 
       since the start of the pandemic, by age and sex.  
       By definition, the actual cause of death may not be COVID-19 in all cases.   
-      See the {indicator definition:cumDeathsByDeathDate} for more information.    
+      See the About tab for more information.    
     # {{ EndDevOnlyBlock }} 
 
     download:
@@ -235,7 +235,7 @@ cards:
       # TODO: GA to write and reference md file
       - heading: About 
         tabType: metadata
-        filename: metadataTabs/deaths/tabDeathsByAgeAndSex.md
+        filename: metadataTabs/deaths/tabDeathsAndDeathRates.md
       # {{ EndDevOnlyBlock }}
 
   - heading: Death rates by age and sex
@@ -253,7 +253,7 @@ cards:
       Number of deaths of people who had had a positive test result for COVID-19 since the 
       start of the pandemic per 100,000 resident population, by age and sex.  
       By definition, the actual cause of death may not be COVID-19 in all cases.   
-      See the {indicator definition:cumDeathsByDeathDate} for more information.    
+      See the About tab for more information.    
     # {{ EndDevOnlyBlock }} 
 
     download:
@@ -322,7 +322,7 @@ cards:
       # TODO: GA to write and reference md file
       - heading: About 
         tabType: metadata
-        filename: metadataTabs/deaths/tabDeathRatesByAgeAndSex.md
+        filename: metadataTabs/deaths/tabDeathsAndDeathRates.md
       # {{ EndDevOnlyBlock }}
 
   - heading: Deaths by area # Total cumulative deaths by area on live pending implementation of abstract
@@ -338,7 +338,7 @@ cards:
       Number of deaths since the start of the pandemic of people who had had a positive test result for COVID-19, 
       and equivalent rates per 100,000 resident population, by area.  By definition, the actual cause of death may 
       not be COVID-19 in all cases.  National data are not directly comparable - 
-      see the {indicator definition:cumDeathsByPublishDate} for more information.    
+      see the About tab for more information.    
     # {{ EndDevOnlyBlock }} 
 
     download:
@@ -451,7 +451,7 @@ cards:
       # TODO: GA to write and reference md file
       - heading: About 
         tabType: metadata
-        filename: metadataTabs/deaths/tabDeathsAndDeathRatesByArea.md
+        filename: metadataTabs/deaths/tabDeathsAndDeathRates.md
       # {{ EndDevOnlyBlock }}
 
   - heading: Deaths by date reported, by nation
@@ -463,8 +463,7 @@ cards:
     abstract: > 
       Number of deaths of people who had had a positive test result for COVID-19, by date reported, by nation.  
       By definition, the actual cause of death may not be COVID-19 in all cases.  
-      National data are not directly comparable - see the {indicator definition:genDeathsByPublishDate} 
-      for more information. 
+      National data are not directly comparable - see the About tab for more information. 
     # {{ EndDevOnlyBlock }}   
 
     download:
@@ -527,7 +526,7 @@ cards:
       # TODO: GA to write and reference md file
       - heading: About 
         tabType: metadata
-        filename: metadataTabs/deaths/tabDeathsByNationByPublishDate.md
+        filename: metadataTabs/deaths/tabDailyDeaths.md
       # {{ EndDevOnlyBlock }}
 
 # {{ StartDevOnlyBlock }}
