--- a/Layouts/testing.yaml
+++ b/Layouts/testing.yaml
@@ -40,7 +40,7 @@ cards:
       Number of lab-confirmed positive or negative COVID-19 test results by test type, by date reported.  This is a count of 
       test results and may include multiple tests for an individual person.  Test types include NHS and PHE tests, commercial tests, 
       antibody tests and surveillance tests.  Testing capacity is shown for the UK only and is an estimate of the number
-      of tests that can be performed based on availability of staff and resources.  See the About tab for more information.
+      of tests that can be performed based on availability of staff and resources.
     # {{ EndDevOnlyBlock }}
 
     download:
@@ -227,8 +227,7 @@ cards:
     abstract: >
       Number of people with at least one lab-confirmed positive or negative COVID-19 test result, by date reported. 
       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
-      different dates between 15th June and 14th July for each nation. National data are not directly comparable - 
-      see the About tab for more information. 
+      different dates between 15th June and 14th July for each nation. National data are not directly comparable. 
     # {{ EndDevOnlyBlock }}
 
     download:
@@ -301,8 +300,7 @@ cards:
     abstract: >
       Number of people with at least one lab-confirmed positive or negative COVID-19 test result, by date reported. 
       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
-      different dates between 15th June and 14th July for each nation. National data are not directly comparable - 
-      see the About tab for more information. 
+      different dates between 15th June and 14th July for each nation. National data are not directly comparable. 
     # {{ EndDevOnlyBlock }}
     download:
       - newPillarOneTestsByPublishDate
