--- a/Layouts/cases.yaml
+++ b/Layouts/cases.yaml
@@ -37,7 +37,7 @@ cards:
     abstract: >
       Number of people with at least one lab-confirmed positive COVID-19 test result, by specimen date. 
       Initially only NHS and, in England, PHE tests were included but commercial tests have been included from   
-      different dates between 15th June and 14th July for each nation.  National data are not directly comparable.
+      different dates between 15th June and 14th July for each nation.  National data are not directly comparable.--
     # {{ EndDevOnlyBlock }}
     
     download:
